--- a/src/pages/Contacto/Contacto.css
+++ b/src/pages/Contacto/Contacto.css
@@ -184,7 +184,7 @@
         border-radius: 8px;
         padding: 4px 1.5rem ;
         font-size: 1rem;
-
+        opacity: 0.8;
     }
 }
 .Contacto-li span{
