--- a/src/App.css
+++ b/src/App.css
@@ -133,10 +133,6 @@ body{
 }
 .Header-li:hover{
     background-color: var(--lila);
-
-    @media(max-width: 48rem){
-        background-color: transparent;
-    }
 }
 .Button-wrapper{
     display: flex;
@@ -180,7 +176,7 @@ body{
         font-size: 0.8em;
     }
     @media(max-width: 48rem){
-        font-size: 1.2rem;
+        font-size: 1rem;
         padding: 8px 20px;
     }
 }
@@ -238,6 +234,9 @@ body{
         padding: 0.5rem 1.5rem;
         border-radius: 8px;
     }
+}
+.Button-wrapper-mobile .Header-button:hover{
+    background-color: var(--lila);
 }
 .Toggle-menu.mobile{
     position: absolute;
