--- a/src/components/CardTrabajo/CardTrabajo.css
+++ b/src/components/CardTrabajo/CardTrabajo.css
@@ -10,8 +10,9 @@
     background-color: #ffffff1a;
     border-radius: 20px;
     opacity: 0;
-    transition: all .5s ease;
-    animation: aparecer .5s ease ;
+    transition: all 1s ease;
+    animation: aparecer 1s ease ;
+    animation-delay: .5s;
     animation-fill-mode: forwards;
     outline: 2px solid transparent;
 
@@ -29,6 +30,12 @@
     @media screen and (max-width: 920px){
         background-image: linear-gradient(-135deg,  #C900D1, #221FBD);
     }
+}
+.Trabajos-article:nth-child(2){
+    animation-delay: 1s;
+}
+.Trabajos-article:nth-child(3){
+    animation-delay: 1.5s;
 }
 .Trabajos-article:first-child:hover .Trabajos-h3,
 .Trabajos-article:first-child:hover .Trabajos-rrss{
