--- a/src/pages/SobreMi/SobreMi.css
+++ b/src/pages/SobreMi/SobreMi.css
@@ -230,6 +230,10 @@ hr{
     margin-bottom: 1.5rem;
     color: var(--lila);
     z-index: 1;
+
+    @media(max-width: 48rem){
+        font-size: 1.6rem;
+    }
 }
 .grid-container.gradient{
     background-image: linear-gradient(45deg, #221FBD, #C900D1);
@@ -270,6 +274,10 @@ hr{
     margin-bottom: 1rem;
     color: var(--blanco);
     z-index: 1;
+
+    @media (max-width: 48rem){
+        font-size: 1.6rem;
+    }
 }
 .Pills-wrapper p{
     margin-bottom: 1rem;
